...
    TextButton(
        onClick = onClickAction, Modifier.fillMaxWidth()
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .semantics { testTag = "Product Description View" },
            horizontalAlignment = Alignment.Start
        ) {
            Text(
                text = stringResource(id = R.string.product_description),
                color = MaterialTheme.colors.onBackground
            )
...
    val scroll = rememberScrollState(0)

    AndroidView(
        modifier = Modifier
            .verticalScroll(scroll)
            .padding(horizontal = 8.dp)
            .semantics { testTag = "Bottom Sheet Dialog" },
        factory = { context -> TextView(context) },
        update = { it.text = HtmlCompat.fromHtml(html, HtmlCompat.FROM_HTML_MODE_LEGACY) }
    )
}

@Preview
...
