...
                visible = addedToCart,
                enter = fadeIn(),
            ) {
                IconButton(onClick = { /* goToCart() */ }) {
                    Icon(
                        imageVector = Icons.Filled.ShoppingCart,
                        contentDescription = "Shopping cart",
                        tint = MaterialTheme.colors.onBackground,
                        modifier = Modifier.semantics {
                            contentDescription = "Shopping cart"
                            testTag = "123"

                        }
...
            IconButton(onClick = { favorited = !favorited }) {
                Icon(
                    imageVector = if (favorited) Icons.Filled.Favorite else Icons.Outlined.FavoriteBorder,
                    contentDescription = "Add to favorites",
                    tint = MaterialTheme.colors.onBackground,
                    modifier = Modifier.semantics {
                        contentDescription = "Favorite"
                        stateDescription = favorited.toString()
                    }

                )
            }
            IconButton(onClick = { /* shareItem() */ }) {
...
