<resources>
    <string name="app_name">bol.com Vleeming</string>
    <string name="error_message">We\'re sorry something went wrong. Please try again later</string>
    <string name="product_description">Product omschrijving</string>
    <string name="add_to_cart">In winkelwagentje</string>
</resources>